--- a/starembedder_bot/package.json
+++ b/starembedder_bot/package.json
@@ -18,15 +18,19 @@
     "@sapphire/type": "^2.6.0",
     "@sapphire/utilities": "^3.18.2",
     "@skyra/env-utilities": "^2.0.1",
+    "better-sqlite3": "^12.6.2",
     "colorette": "^2.0.20",
-    "discord.js": "^14.25.1"
+    "discord.js": "^14.25.1",
+    "drizzle-orm": "^0.45.1"
   },
   "devDependencies": {
     "@sapphire/cli": "^1.9.3",
     "@sapphire/prettier-config": "^2.0.0",
     "@sapphire/ts-config": "^5.0.3",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.3.0",
     "@types/ws": "^8.18.1",
+    "drizzle-kit": "^0.31.9",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.8.1",
     "tsc-watch": "^7.2.0",
@@ -40,7 +44,10 @@
     "start": "node dist/index.js",
     "dev": "run-s build start",
     "watch:start": "tsc-watch --onSuccess \"node ./dist/index.js\"",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "prettier": "@sapphire/prettier-config"
 }
