--- a/starembedder_web/package.json
+++ b/starembedder_web/package.json
@@ -36,5 +36,10 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.54.0",
 		"vite": "^7.3.1"
+	},
+	"dependencies": {
+		"@skyra/discord-components-core": "^4.0.2",
+		"lit": "^3.3.2",
+		"puppeteer": "^24.37.5"
 	}
 }
