[ADD] Pelican Panel Starting Script

--- a/starembedder_bot/src/.env.example
+++ b/starembedder_bot/src/.env.example
@@ -1,3 +1,16 @@
-# Tokens
+# ── Discord ──────────────────────────────────────────────────────────────────
+# Bot token from https://discord.com/developers/applications
 DISCORD_TOKEN=
+
+# Comma-separated list of Discord user IDs that are bot owners
 OWNERS=
+
+# ── Web render server ─────────────────────────────────────────────────────────
+# Base URL of the SvelteKit web server used to render skullboard images
+# Dev: http://localhost:5173  |  Prod: http://localhost:3000 (or your domain)
+WEB_SERVER_URL=http://localhost:3000
+
+# ── Database ──────────────────────────────────────────────────────────────────
+# Absolute path to the SQLite database file.
+# Defaults to <bot_cwd>/src/lib/db/data/skullboard.db if unset.
+# DATABASE_PATH=/absolute/path/to/skullboard.db
